# whitespace-primes

./: .gitignore  Dockerfile  Makefile  README.md  generate_whitespace.py  pyproject.toml  run_whitespace.py
template/: primes.ws.asm.j2
whitespace/: primes-32bit.ws  primes-32bit.ws.asm  primes-64bit.ws  primes-64bit.ws.asm
