[tool.poetry]
name = "whitespace-primes"
version = "0.1.0"
description = "Prime number sieve in Whitespace"
authors = ["rzuckerm"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.4"
whitespace-asm = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
